# phantom

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  docConfig  docConfig~
src/: UnitVector.h  bodypart.cpp  bodypart.h  boundingbox.cpp  boundingbox.h  boxnet.cpp  boxnet.h  calculationarea.cpp  calculationarea.hpp  cjsonserializer.cpp  cjsonserializer.h  cylinder.cpp  cylinder.h  elbow.cpp  elbow.h  freefd.cpp  freefd.h  hip.cpp  hip.h  ijsonserializable.h  joint.cpp  joint.h  knee.cpp  knee.h  line.cpp  line.h  linepaintarea.cpp  linepaintarea.h  logger.cpp  logger.h  main.cpp  main_window.cpp  main_window.hpp  netpaintarea.cpp  netpaintarea.h  newt.cpp  newt.h  phantom.cpp  phantom.h  plane.cpp  (+17 more)
tests/: bodypartTest.cpp  boundingboxtest.cpp  boxNet_test.cpp  calculatedareatest.cpp  matrixtest.cpp  phantomTest.cpp  pointTest.cpp  readfiletest.cpp  sliceTest.cpp  vector3dtest.cpp
